@@ -33,6 +33,10 @@
 
 	* src/ejabberd_local.erl: Convert to exmpp.
 
+	* src/jlib.erl: Accept new #xmlel in functions that create #iq. A
+	warning is printed when these functions are called with an old
+	#xmlelement.
+
 2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/Makefile.in: Remove the -I flag for exmpp includes; the
